[project]
name = "leetcode-ds-algo"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "scipy>=1.15.2",
]

[tool.uv]
package = false

[dependency-groups]
notebook = [
    "ipykernel>=6.29.5",
]
lint-fmt = [
    "mypy>=1.13.0",
    "pre-commit>=4.2.0",
    "ruff>=0.7.4",
]

[tool.ruff]
extend-exclude = [
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".vscode",
    "build",
    "site-packages",
]
force-exclude = true
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
ignore = ["F841"]
select = ["I", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = 3.13
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true
explicit_package_bases = true
disable_error_code = [
    "import-untyped",
    "import-not-found",
]
